fixing the errors not showing images

--- a/home/css/flexbox-grid.css
+++ b/home/css/flexbox-grid.css
@@ -20,14 +20,18 @@
     padding: 20px;
     display: flex;
     flex-wrap: wrap;
-  
   }
-
   .main-content > div {
     background-color: #f1f1f1;
-    width: 300px;
+    width: 350px;
     margin: 10px;
     text-align: center;
     line-height: 35px;
     font-size: 15px;
+  }
+  
+  .sidebar {
+    flex: 1;
+    background-color: #f5f5f5;
+    padding: 20px;
   }
